--- a/.env.staging
+++ b/.env.staging
@@ -2,7 +2,7 @@
 
 # # DB数据库配置
 
-VITE_DB="https://dev.csv.studio.dionysus.bar"
+VITE_DB="https://csv.studio.dionysus.bar"
 
 
 # 海外资源
@@ -15,10 +15,10 @@ VITE_PREFIX_TUNED="https://alist.vtb.link/d/AZGLOBAL/STUDIO01/%E9%BB%8E%E9%85%A9
 VITE_SUFFIX_TUNED=""
 # # 代理配置
 # # # 原版音频
-VITE_PREFIX_ORIGN_DL_CDN="https://alist.vtb.link/d/AZGLOBAL/STUDIO01/%E9%BB%8E%E9%85%A9-Lunette/"
+VITE_PREFIX_ORIGN_DL_CDN="https://alist.vtb.link/d/AZGLOBAL/STUDIO01-TEMP/%E9%BB%8E%E9%85%A9-Lunette/"
 VITE_SUFFIX_ORIGN_DL_CDN=""
 # # # 修正音频
-VITE_PREFIX_TUNED_DL_CDN="https://alist.vtb.link/d/AZGLOBAL/STUDIO01/%E9%BB%8E%E9%85%A9-Lunette/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+VITE_PREFIX_TUNED_DL_CDN="https://alist.vtb.link/d/AZGLOBAL/STUDIO01-TEMP/%E9%BB%8E%E9%85%A9-Lunette/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
 VITE_SUFFIX_TUNED_DL_CDN=""
 
 
@@ -32,8 +32,8 @@ VITE_PREFIX_TUNED_CH="https://alist.vtb.link/d/AZGLOBAL/STUDIO01/%E9%BB%8E%E9%85
 VITE_SUFFIX_TUNED_CH=""
 # # 代理配置
 # # # 原版音频
-VITE_PREFIX_ORIGN_DL_CDN_CH="https://alist.vtb.link/d/AZGLOBAL/STUDIO01/%E9%BB%8E%E9%85%A9-Lunette/"
+VITE_PREFIX_ORIGN_DL_CDN_CH="https://alist.vtb.link/d/AZGLOBAL/STUDIO01-TEMP/%E9%BB%8E%E9%85%A9-Lunette/"
 VITE_SUFFIX_ORIGN_DL_CDN_CH=""
 # # # 修正音频
-VITE_PREFIX_TUNED_DL_CDN_CH="https://alist.vtb.link/d/AZGLOBAL/STUDIO01/%E9%BB%8E%E9%85%A9-Lunette/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
+VITE_PREFIX_TUNED_DL_CDN_CH="https://alist.vtb.link/d/AZGLOBAL/STUDIO01-TEMP/%E9%BB%8E%E9%85%A9-Lunette/%E4%BF%AE%E5%A4%8D%E6%96%87%E7%89%A9/"
 VITE_SUFFIX_TUNED_DL_CDN_CH=""
